Updated instruction text in NewForm wizard. Updated required fields for new user creation on NewForm wizard and UserCreation. Added "feel good" invite button to the Sharing tab. Updated Hint text on EditForm settings. Files modified - [pages-config.json,UserCreation.html,EditForm.html,NewForm.html,pom.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -115,10 +115,10 @@
                                                     <wm-layoutgrid name="layoutgrid9_1">
                                                         <wm-gridrow name="gridrow37_1">
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn54">
-                                                                <wm-form-field name="sharedWith" displayname="Allow Sharing" show="true" primary-key="false" generator="assigned" key="sharedWith" type="boolean" widget="checkbox" placeholder="" hint="This enables sharing the form with other CivicXpress users (and the ability to invite unregistered users to join and view the form)"></wm-form-field>
+                                                                <wm-form-field name="sharedWith" displayname="Allow Sharing" show="true" primary-key="false" generator="assigned" key="sharedWith" type="boolean" widget="checkbox" placeholder="" hint="This enables sharing the form with other CivicXpress users and the ability to invite unregistered users to join and view the form."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn55">
-                                                                <wm-form-field name="attachments" displayname="Allow Attachments" show="true" primary-key="false" generator="assigned" key="attachments" type="boolean" widget="checkbox" placeholder="" hint="This enables attaching documents to a form"></wm-form-field>
+                                                                <wm-form-field name="attachments" displayname="Allow Attachments" show="true" primary-key="false" generator="assigned" key="attachments" type="boolean" widget="checkbox" placeholder="" hint="This enables attaching multiple documents to a form."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn58">
                                                                 <wm-form-field name="digitalSignatures" displayname="Allow Digital Signatures" show="true" primary-key="false" generator="assigned" key="digitalSignatures" type="boolean" widget="checkbox" placeholder=""
@@ -147,7 +147,7 @@
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn76_4">
                                                                 <wm-form-field displayname="Require Owner" widget="checkbox" show="true" type="custom" name="requireOwner" disabled="bind:Widgets.liveformUpdateFormType.formWidgets.gisOptionSelect.displayValue === 'None'"
-                                                                hint="This forces the user to provide Owner information for the GIS record if none is already present"></wm-form-field>
+                                                                hint="This option requires that the user specify the Owner of the selected GIS record. They can select an Owner already associated with the Parcel, provide new Owner information, or (if Vendor is enabled) select the Vendor as the Owner."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow39_1">
