Company "Active" Changes-5 Files modified - [Cx2QueryExecutorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,ManageMunicipalityVendors.variables.json,cx2_query.json,Cx2QueryExecutorService.java,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -233,7 +233,7 @@
                         <wm-composite name="composite3">
                             <wm-label class="col-md-3 form-control-static" name="label8" caption="Expiration Date" horizontalalign="left" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container3">
-                                <wm-date name="datetimeExpirationFormPending" mindate="bind:today" datepattern="MM-dd-yyyy" placeholder="Select Date"></wm-date>
+                                <wm-date name="datetimeExpirationFormPending" mindate="bind:today" datepattern="MM-dd-yyyy" placeholder="Select Date" datavalue="CURRENT_DATE"></wm-date>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
