--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -132,18 +132,16 @@
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn123">
                                                 <wm-container name="chatcontent" overflow="auto" class="chatcontent">
                                                     <wm-livelist itemclass="bind:item.users.id ===Variables.CurrentUserDetails.dataSet.id? &quot;clearfix mine&quot; : &quot;clearfix&quot;" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list chat" dataset="bind:Variables.FormMessagesData.dataSet"
-                                                    navigation="None" name="chatmessageList" nodatamessage="Start Chat by entering message" listclass="list-group">
+                                                    navigation="None" name="livelistFormMessages" nodatamessage="Start Chat by entering message" listclass="list-group">
                                                         <wm-listtemplate layout="inline" name="listtemplate1">
-
                                                             <wm-container class="media-right" name="container4">
                                                                 <wm-picture name="userImage" width="24pt" height="24pt" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
                                                                 shape="circle" margin="1em unset unset unset" class="userpic"></wm-picture>
                                                             </wm-container>
                                                             <wm-container class="popover media-body" name="container5">
                                                                 <wm-label name="Content" caption="bind:Variables.FormMessagesData.dataSet.message" class="p media-heading"></wm-label>
-                                                                <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tagged People" class="pull-left" iconclass="wi wi-tag" on-click="Widgets.dialogShowTaggedPeople.open()"></wm-anchor>
+                                                                <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tags" class="pull-left" iconclass="wi wi-tag" on-click="Widgets.dialogShowTaggedPeople.open()" textdecoration="underline" fontsize="8" fontunit="pt"></wm-anchor>
                                                                 <wm-container class="pull-right" name="container5_1">
-
                                                                     <wm-label name="label4" class="small" caption="by " padding="unset 0.5em unset unset"></wm-label>
                                                                     <wm-label name="Name" class="small" caption="bind:Variables.FormMessagesData.dataSet.data[$i].users.firstName +&quot; &quot;+Variables.FormMessagesData.dataSet.data[$i].users.lastName"></wm-label>
                                                                     <wm-label name="label4" class="small" caption="at " padding="unset 0.5em unset 1em"></wm-label>
@@ -153,21 +151,7 @@
                                                         </wm-listtemplate>
                                                     </wm-livelist>
                                                 </wm-container>
-                                                <!--<wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.FormMessagesData.dataSet" navigation="Scroll" name="livelistFormMessages"-->
-                                                <!--loadingdatamsg="Loading Messages..." nodatamessage="No Messages" orderby="postedAt:asc" disableitem="false">-->
-                                                <!--    <wm-listtemplate layout="media" name="listtemplate1">-->
-                                                <!--        <wm-container class="media-left media-top" name="container4" width="200px">-->
-                                                <!--            <wm-picture name="Picture" class="media-object" width="32pt" height="32pt" shape="circle" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"></wm-picture>-->
-                                                <!--        </wm-container>-->
-                                                <!--        <wm-container class="media-body" padding="unset 1.5em unset 1.25em" name="container5">-->
-                                                <!--            <wm-label class="pull-left" caption="bind:Variables.FormMessagesData.dataSet.data[$i].users.firstName +&quot; &quot;+Variables.FormMessagesData.dataSet.data[$i].users.lastName" name="Name" margin="0em unset 0.5em unset"-->
-                                                <!--            fontsize="1.143" fontunit="em"></wm-label>-->
-                                                <!--            <wm-label name="Time" class="pull-right text-muted" caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'MM/dd hh:mm'"></wm-label>-->
-                                                <!--            <wm-label caption="bind:Variables.FormMessagesData.dataSet.message" name="Description" class="p text-muted"></wm-label>-->
-                                                <!--            <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tagged People" class="pull-right" iconclass="wi wi-tag" on-click="Widgets.dialogShowTaggedPeople.open()"></wm-anchor>-->
-                                                <!--        </wm-container>-->
-                                                <!--    </wm-listtemplate>-->
-                                                <!--</wm-livelist>-->
+
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow81" padding="1em unset">
