--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -42,7 +42,7 @@
                                                 <wm-grid-action key="customButton1" display-name="Invite User" show="true" class="btn-secondary" iconclass="wi wi-contact-mail" title="Invite User" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="Widgets.dialogUserProfile.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove" action="Variables.DeleteFromVendorUsers.invoke()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove" action="customRow1Action($event)" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -234,5 +234,8 @@
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewDeleteAdminConfrim">
+        <wm-confirmdialog name="confirmdialogDeleteAdminConfrim" message="This action will also revoke Company Admin privileges. Would you like to proceed?" on-ok="confirmdialogDeleteAdminConfrimOk($event, $scope)"></wm-confirmdialog>
     </wm-view>
 </wm-page>
