Sample Statistics Demo to Jason New files added - [UserStatistics.js,UserStatistics.css,UserStatistics.html,UserStatistics.variables.json,UserStatistics] Files modified - [leftnav.html,Test.variables.json,pages-config.json,Test.html,TestRichText.java,app.variables.json]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -27,5 +27,8 @@
         <wm-nav-item name="nav_item9_1">
             <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item10">
+            <wm-anchor name="anchor10" iconclass="wi wi-bar-graph" caption="Statistics" on-click="Variables.goToPage_UserStatistics.invoke()"></wm-anchor>
+        </wm-nav-item>
     </wm-nav>
 </wm-partial>
