--- a/src/main/webapp/pages/Test/Test.html
+++ b/src/main/webapp/pages/Test/Test.html
@@ -6,7 +6,8 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-richtexteditor name="richtexteditor1"></wm-richtexteditor>
             <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button1" on-click="Variables.liveVariable1.createRecord()"></wm-button>
-            <wm-html name="html1">bind:Variables.liveVariable2.firstRecord.description</wm-html>
+            <wm-html name="html1" content="bind:Variables.liveVariable2.firstRecord.description">bind:Variables.liveVariable2.firstRecord.description</wm-html>
+            <wm-html name="html2" content="bind:Widgets.html1.content">bind:Widgets.html1.content</wm-html>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
